--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5sp"
-    android:background="@color/pink"
+    android:background="@color/purple"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -17,8 +17,8 @@
             android:id="@+id/sync_button"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/ic_sync_button"
-            android:text=""
+            android:background="@color/pink"
+            android:text="Sync"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true" />
