--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,12 @@
     <color name="transparent">#9000</color>
     <color name="black">#000000</color>
     <color name="green">#66FF00</color>
-    <color name="pink">#FFB5C5</color>
+    <color name="purple">#A020F0</color>
+    <color name="pink">#FFC0CB</color>
+
+
+    <color name="primary">#A066D3</color>
+    <color name="primary_dark">#9933FA</color>
+    <color name="accent">#FFB5C5</color>
+
 </resources>
